feat: add language coaching corrections

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,7 @@
     <section class="subtitles">
       <div id="botEnLine" class="line">[EN] —</div>
       <div id="botEsLine" class="line">[ES] —</div>
+      <div id="botCorrectionLine" class="line">[Feedback] —</div>
     </section>
 
     <section style="margin-top:16px;">
